# mango-assistant

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
.test-config/mango/: commands.yaml
docs/changelog/0.2.0/: CHANGELOG.md
docs/changelog/0.2.2/: CHANGELOG.md
docs/changelog/0.2.3/: CHANGELOG.md
docs/changelog/0.2.4/: CHANGELOG.md
docs/changelog/0.2.5/: CHANGELOG.md
docs/changelog/0.2.6/: CHANGELOG.md
openspec/: config.yaml
openspec/changes/archive/2026-05-08-extract-default-config-yaml/: tasks.md
openspec/changes/archive/2026-05-08-keyboard-first-navigation/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-08-mango-tui/: design.md  tasks.md
openspec/changes/archive/2026-05-13-lateral-panel-navigation/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-19-copy-output-to-clipboard/: design.md  tasks.md
openspec/changes/archive/2026-05-19-sort-categories-and-macros/: proposal.md  tasks.md
openspec/changes/copy-output-to-clipboard/: proposal.md  tasks.md
openspec/changes/extract-default-config-yaml/: design.md  proposal.md  tasks.md
openspec/changes/extract-default-config-yaml/specs/default-config-resource/: spec.md
openspec/changes/lateral-panel-navigation/: tasks.md
openspec/changes/local-config-merge/: design.md  proposal.md  tasks.md
openspec/changes/mango-tui/: proposal.md  tasks.md
openspec/changes/sort-categories-and-macros/: design.md  tasks.md
openspec/specs/command-runner/: spec.md
openspec/specs/config-merge/: spec.md
openspec/specs/config-sort/: spec.md
openspec/specs/default-config-resource/: spec.md
openspec/specs/keyboard-navigation/: spec.md
openspec/specs/label-formatting/: spec.md
openspec/specs/local-user-config/: spec.md
openspec/specs/macro-catalog/: spec.md
openspec/specs/output-clipboard/: spec.md
openspec/specs/tui-interface/: spec.md
src/mango/: config.default.yaml  config.py  default_config.yaml  main.py  merger.py  runner.py  updater.py
src/mango.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/mango/tui/: app.py
(+13 files in other folders)
